--- a/files/bibliography.bib
+++ b/files/bibliography.bib
@@ -1,14 +1,34 @@
-@article{thorpe2019model,
-  title={Model-Free Stochastic Reachability Using Kernel Distribution Embeddings},
+@inproceedings{thorpe2021stochastic,
+  title={Stochastic Optimal Control via Hilbert Space Embeddings of Distributions},
   author={Thorpe, Adam J and Oishi, Meeko MK},
-  journal={IEEE Control Systems Letters},
-  year={2019},
-  publisher={IEEE}
+  booktitle={Conference on Decision and Control (To Appear)},
+  year={2021}
 }
-
-@article{thorpe2019stochastic,
-  title={Stochastic Reachability for Systems up to a Million Dimensions},
+@inproceedings{thorpe2021learning,
+  title={Learning Approximate Forward Reachable Sets Using Separating Kernels},
+  author={Thorpe, Adam J and Ortiz, Kendric R and Oishi, Meeko MK},
+  booktitle={Learning for Dynamics and Control},
+  pages={201--212},
+  year={2021},
+  organization={PMLR}
+}
+@article{thorpe2020data,
+  title={Data-Driven Stochastic Reachability Using Hilbert Space Embeddings},
+  author={Thorpe, Adam J and Ortiz, Kendric R and Oishi, Meeko MK},
+  journal={Automatica (Under Review)},
+  year={2021}
+}
+@inproceedings{thorpe2020sreachtools,
+  title={SReachTools Kernel Module: Data-Driven Stochastic Reachability Using Hilbert Space Embeddings of Distributions},
+  author={Thorpe, Adam J and Ortiz, Kendric R and Oishi, Meeko MK},
+  booktitle={Conference on Decision and Control (To Appear)},
+  year={2021}
+}
+@inproceedings{thorpe2021approximate,
+  title={Approximate stochastic reachability for high dimensional systems},
   author={Thorpe, Adam J and Sivaramakrishnan, Vignesh and Oishi, Meeko MK},
-  journal={arXiv preprint arXiv:1910.10818},
-  year={2019}
+  booktitle={2021 American Control Conference (ACC)},
+  pages={1287--1293},
+  year={2021},
+  organization={IEEE}
 }
