--- a/_bibliography/journals.bib
+++ b/_bibliography/journals.bib
@@ -12,3 +12,13 @@ author = {Adam J. Thorpe and Kendric R. Ortiz and Meeko M.K. Oishi},
 keywords = {Machine learning, Stochastic systems, Reachability, Safety, Optimal control},
 abstract = {In this paper, we compute finite sample bounds for data-driven approximations of the solution to stochastic reachability problems. Our approach uses a nonparametric technique known as kernel distribution embeddings, and provides probabilistic assurances of safety for stochastic systems in a model-free manner. By implicitly embedding the stochastic kernel of a Markov control process in a reproducing kernel Hilbert space, we can approximate the safety probabilities for stochastic systems with arbitrary stochastic disturbances as simple matrix operations and inner products. We present finite sample bounds for point-based approximations of the safety probabilities through construction of probabilistic confidence bounds that are state- and input-dependent. One advantage of this approach is that the bounds are responsive to non-uniformly sampled data, meaning that tighter bounds are feasible in regions of the state- and input-space with more observations. We numerically evaluate the approach, and demonstrate its efficacy on a neural network-controlled pendulum system.}
 }
+
+@ARTICLE{9352971,
+  author={Vinod, Abraham P. and Thorpe, Adam J. and Olaniyi, Philip A. and Summers, Tyler H. and Oishi, Meeko M. K.},
+  journal={IEEE Transactions on Control Systems Technology}, 
+  title={Sensor Selection for Dynamics-Driven User-Interface Design}, 
+  year={2022},
+  volume={30},
+  number={1},
+  pages={71-84},
+  doi={10.1109/TCST.2021.3056242}}
