--- a/_bibliography/other.bib
+++ b/_bibliography/other.bib
@@ -16,12 +16,12 @@
 
 @article{osti_1642567,
 title = {Autonomous Multi-Platform Sensor Scheduling for Intelligence Surveillance and Reconnaissance.},
-author = {Richards, John and Richards, John and Richards, John and Richards, John and Patel, Anirudh and Patel, Anirudh and Thorpe, Adam and Thorpe, Adam and Schlossman, Rachel and Schlossman, Rachel},
+author = {Richards, John and Patel, Anirudh and Thorpe, Adam and Schlossman, Rachel},
 abstractNote = {Abstract not provided.},
 doi = {},
 url = {https://www.osti.gov/biblio/1642567}, journal = {},
-number = ,
-volume = ,
+number = {},
+volume = {},
 place = {United States},
 year = {2019},
 month = {9}
@@ -33,8 +33,8 @@ author = {El-Kady, Ihab F and Reinke, Charles M. and Pillars, Jamin Ryan and Arr
 abstractNote = {Abstract not provided.},
 doi = {},
 url = {https://www.osti.gov/biblio/1847587}, journal = {},
-number = ,
-volume = ,
+number = {},
+volume = {},
 place = {United States},
 year = {2021},
 month = {2}
@@ -81,8 +81,8 @@ author = {Langlois, Eric and Finnegan, Patrick Sean and Pillars, Jamin Ryan and 
 abstractNote = {Abstract not provided.},
 doi = {},
 url = {https://www.osti.gov/biblio/1469083}, journal = {},
-number = ,
-volume = ,
+number = {},
+volume = {},
 place = {United States},
 year = {2017},
 month = {8}
@@ -94,8 +94,8 @@ author = {St John, Christopher and Arrington, Christian Lew and Pillars, Jamin R
 abstractNote = {Abstract not provided.},
 doi = {},
 url = {https://www.osti.gov/biblio/1401908}, journal = {},
-number = ,
-volume = ,
+number = {},
+volume = {},
 place = {United States},
 year = {2016},
 month = {10}
@@ -107,8 +107,8 @@ author = {Langlois, Eric and Pillars, Jamin Ryan and Monson, Todd and Arrington,
 abstractNote = {Abstract not provided.},
 doi = {},
 url = {https://www.osti.gov/biblio/1506184}, journal = {},
-number = ,
-volume = ,
+number = {},
+volume = {},
 place = {United States},
 year = {2016},
 month = {9}
