Fixing malformed bibtex entry.

--- a/_bibliography/other.bib
+++ b/_bibliography/other.bib
@@ -40,7 +40,7 @@ year = {2021},
 month = {2}
 }
 
-@phdthesis{
+@phdthesis{Thorpe_PHD_2023,
 author={Thorpe,Adam J.},
 year={2023},
 title={Data-Driven Stochastic Optimal Control Using Hilbert Space Embeddings of Distributions},
