Updating details layout.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -200,7 +200,7 @@ abstract={Autonomous systems are increasingly being deployed in complex environm
 keywords={Autonomous systems; Data-driven control; Stochastic systems; Optimal control problems; Embeddings; Electrical engineering; Computer engineering; Computer science; 0544:Electrical engineering; 0984:Computer science; 0464:Computer Engineering},
 isbn={9798380608732},
 language={English},
-url={http://ezproxy.lib.utexas.edu/login?url=https://www.proquest.com/dissertations-theses/data-driven-stochastic-optimal-control-using/docview/2881072078/se-2},
+url={https://www.proquest.com/dissertations-theses/data-driven-stochastic-optimal-control-using/docview/2881072078/se-2},
 }
 
 @article{Thorpe_2018,
