--- a/_posts/2022-01-11-nasa-uli.md
+++ b/_posts/2022-01-11-nasa-uli.md
@@ -2,7 +2,7 @@
 title: "LP Solutions for Stochastic Optimal Control Problems via Hilbert Space Embeddings of Distributions"
 collection: talks
 type: "Talk"
-permalink: /talks/2022-nasa-uli
+permalink: /talks/2022-01-11-nasa-uli
 venue: "Stanford University"
 date: 2022-01-11
 location: "Palo Alto CA, USA (Virtual)"
