--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,3 +1,28 @@
+@misc{miller2024active,
+      title={Active Learning of Dynamics Using Prior Domain Knowledge in the Sampling Process}, 
+      author={Kevin S. Miller and Adam J. Thorpe and Ufuk Topcu},
+      year={2024},
+      eprint={2403.17233},
+      archivePrefix={arXiv},
+      primaryClass={eess.SY}
+}
+
+@article{10.1145/3653678,
+author = {Sridhar, Harini and Huang, Gaojian and Thorpe, Adam and Oishi, Meeko and Pitts, Brandon J.},
+title = {Characterizing the effect of mind wandering on partially autonomous braking dynamics},
+year = {2024},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {2378-962X},
+url = {https://doi.org/10.1145/3653678},
+doi = {10.1145/3653678},
+abstract = {Partially autonomous driving systems often require the human driver to take control at any moment, yet by their design, often cause difficulty with attention management. In this preliminary study, we propose a data- and dynamics-driven approach to characterize driving performance in a partially autonomous vehicle during a manual braking event, under attentive or mind wandering states. A 10-participant experiment was completed in an advanced driving simulator. We employ a non-parametric learning technique, conditional distribution embeddings, to the driving simulator data, to evaluate likelihood of successfully completing the braking maneuver, under both attentive and mind wandering states. Our approach shows a statistically significant difference in braking profiles during mind wandering and non-mind wandering episodes for each participant. Our results reveal that heterogeneity in driving performance may have important implications for the design of autonomy that is responsive to attentional states. Data-driven tools, such as the one proposed here, may be useful in designing participant-specific alerts and warnings for control handovers and other safety-critical maneuvers, because of their potential to accommodate heterogeneous response.},
+note = {Just Accepted},
+journal = {ACM Trans. Cyber-Phys. Syst.},
+month = {mar},
+keywords = {human cyber-physical systems, automated driving, stochastic processes, stochastic reachability}
+}
+
 @misc{thorpe2023physicsinformed,
       title={Physics-Informed Kernel Embeddings: Integrating Prior System Knowledge with Data-Driven Control}, 
       author={Adam J. Thorpe and Cyrus Neary and Franck Djeumou and Meeko M. K. Oishi and Ufuk Topcu},
@@ -7,10 +32,10 @@
       primaryClass={eess.SY}
 }
 
-@misc{hsin2023gpsindy,
-      title={GPSINDy: Data-Driven Discovery of Equations of Motion}, 
-      author={Junette Hsin and Shubhankar Agarwal and Adam Thorpe and David Fridovich-Keil},
-      year={2023},
+@misc{hsin2024symbolic,
+      title={Symbolic Regression on Sparse and Noisy Data with Gaussian Processes}, 
+      author={Junette Hsin and Shubhankar Agarwal and Adam Thorpe and Luis Sentis and David Fridovich-Keil},
+      year={2024},
       eprint={2309.11076},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
